# wand

./: .gitignore  angles.ipynb  conv_test.ipynb  embed_test.ipynb  filter_test.ipynb  images.ipynb  inference_tf.ipynb  label.ipynb  labeling.ipynb  labels.yaml  model_build_combined.ipynb  netconfig.py  param_search_analyze.ipynb  receiver.py  tflite_convert.ipynb  tflite_inference.ipynb  training_tf.ipynb
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
c_test/: .gitignore  Makefile  blob_rect.cpp  blob_rect.hpp  build_atan_lut.py  build_cos_lut.py  filter  filter.cpp  line.cpp  point.cpp  render_points.ipynb  test  test.cpp  test_frames.hpp
esp32/: connection_notes.txt  partitions.csv  sdkconfig
esp32/main/: .gitignore  CMakeLists.txt  atan_lut.hpp  blob_rect.cpp  blob_rect.hpp  control.c  control.h  detector.cpp  detector.h  encode_ui_html.py  index.html  main.c  main.cpp  model.hpp  point.cpp  point.hpp  ui_server.c  ui_server.h  wifi.c  wifi.h
esp32/wand/components/opencv_import/: CMakeLists.txt  opencv_import.cpp
esp32/wand/components/opencv_import/include/: opencv_import.hpp
esp32/wand/components/opencv_import/upstream/core/src/: alloc.cpp  convert.simd_declarations.hpp  persistence.hpp  precomp.hpp  system.cpp  trace.cpp
esp32/wand/components/opencv_import/upstream/features2d/src/: blobdetector.cpp
esp32/wand/components/opencv_import/upstream/imgproc/src/: color.cpp
led_globe/: globe_firmware.py  main.py
notebooks/: conv_test.ipynb  embed_test.ipynb  labeling.ipynb  model_build_combined.ipynb  param_search.ipynb
(+62 files in other folders)
